tests/outref/TCS06.ref

SELECT case when id=1 then 'id_is_1' when id=2 then 1 when id=3 then 'id_is_3' end as caseid FROM names;
[ERROR] PATH:LINENUM DATE TIME : CASE branch type mismatch: left VARCHAR, right NUMERIC
Error with syntax near (line 1, column 36):

SELECT case when id=1 then 'id_is_1' when id=2 then 1 when id=3 then 'id_is_3' end as caseid FROM names;
                                   ^
Error with syntax near (line 1, column 53):

SELECT case when id=1 then 'id_is_1' when id=2 then 1 when id=3 then 'id_is_3' end as caseid FROM names;
                                                    ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT case when id=1 then 'id_is_1' when id=2 then 1 when id=3 then 'id_is_3' end as caseid FROM names;


